[package]
name = "readlock-tokio"
version = "0.1.3"
description = "A weird alternative to Arc<RwLock<T>>, using tokio's RwLock"
repository.workspace = true
license.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
lite = ["dep:rclite"]

[dependencies]
rclite = { workspace = true, optional = true }
tokio = { version = "1.28.2", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.28.2", features = ["macros", "rt", "time"] }

[lints]
workspace = true
