[package]
name = "readlock"
version = "0.1.7"
description = "A weird alternative to Arc<RwLock<T>>"
repository.workspace = true
license.workspace = true
edition.workspace = true

[features]
lite = ["dep:rclite"]

[dependencies]
rclite = { workspace = true, optional = true }

[lints]
workspace = true
